# DazToUnity

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ps1  build_conan.sh  build_osx.sh  clean.ps1  conanfile.py  install.sh  run_daz.ps1  run_daz.sh
Common/: CMakeLists.txt  DTUConfig.h  DzFbxUtils.cpp  DzFbxUtils.h  DzRuntimePluginAction.cpp  DzRuntimePluginAction.h  DzThread.cpp  DzThread.h  DzUtils.cpp  DzUtils.h  JCM_Genesis8.json  debug.cpp  debug.h  errorhandler.h  filesystem.hpp
Common/command_line/: CMakeLists.txt  DFUtoDTU.cpp  DFUtoDTU.h  FixFBX.cpp
Unity/DazStudioPlugin/: CMakeLists.txt  DzUnityAction.cpp  DzUnityAction.h  DzUnityAnimatedMorphsDialog.cpp  DzUnityAnimatedMorphsDialog.h  DzUnityDialog.cpp  DzUnityDialog.h  DzUnityMorphSelectionDialog.cpp  DzUnityMorphSelectionDialog.h  DzUnitySubdivisionDialog.cpp  DzUnityTexturesDialog.cpp  DzUnityTexturesDialog.h  README.md  pluginmain.cpp  version.h
Unity/DazStudioPlugin/Resources/: bak.qrc  resources.qrc
Unity/UnityPlugin/: package.json
Unity/UnityPlugin/Editor/: BlendshapesControllerEditor.cs  DAZEditor.asmdef  DTUConverter.cs  DTUImporter.cs  DTUImporterEditor.cs  DazFBXUtils.cs
Unity/UnityPlugin/Editor/Types/: DTUFile.cs  DTUMaterialExtensions.cs  Records.cs
Unity/UnityPlugin/Runtime/: DAZRuntime.asmdef  DazBlendShape.cs
Unity/UnityPlugin/Scripts/: BlendshapesController.cs  Utilities.cs
Unity/UnityPlugin/Scripts/Editor/: BlendshapesControllerEditor.cs  Bridge.cs  DTUConverter.cs  DTUImporter.cs  DTUImporterEditor.cs  Daz3DBridge.cs  Daz3DDTUImporter.cs  DazCoroutine.cs  DazFBXUtils.cs  DazJSONHelper.cs
Unity/UnityPlugin/Scripts/Editor/Types/: DTUFile.cs  DTUMaterial.cs  DTUMaterialExtensions.cs  DTUSubdivisions.cs  Records.cs
Unity/UnityPlugin/ShaderLibrary/: IrayUberSkin.shadergraph
Unity/UnityPlugin/ShaderLibrary/Helpers/: LightDirection.shadersubgraph
Unity/UnityPlugin/Shaders/: IrayUberSkin.shadergraph  UberSkin.shadergraph
Unity/com.daz.unity/: .gitignore  package.json
Unity/com.daz.unity/Editor/: Bridge.cs  DAZEditor.asmdef  DTUImporter.cs  DTUImporterEditor.cs  DazCoroutine.cs  DazFBXUtils.cs
Unity/com.daz.unity/Editor/Drawers/: DazBlenshapeDrawer.cs
Unity/com.daz.unity/Editor/Types/: DTUFile.cs  DTUMaterial.cs  DTUMaterialExtensions.cs
Unity/com.daz.unity/Runtime/: BlendshapesSyncedController.cs  Daz3DInstance.cs  Utilities.cs
Unity/com.daz.unity/ShaderLibrary/: Hair.shadergraph  IrayUberMetal.shadergraph  IrayUberSkin.shadergraph  IrayUberSpec.shadergraph  NormalsFromTexture.hlsl  Shader Graphs_UberSkin.mat  Wet.shadergraph
Unity/com.daz.unity/ShaderLibrary/Helpers/: GetLightDirection.hlsl
Unity/com.daz.unity/Tests/: DazEditorTests.asmdef
Unreal/DazStudioPlugin/: CMakeLists.txt  DzUnrealAction.cpp  DzUnrealAction.h  DzUnrealDialog.cpp  DzUnrealMorphSelectionDialog.cpp  DzUnrealMorphSelectionDialog.h  DzUnrealSubdivisionDialog.cpp  README.md
Unreal/UnrealPlugin/DazToUnreal/: DazToUnreal.uplugin
Unreal/UnrealPlugin/DazToUnreal/Source/DazToUnreal/Private/: DazToUnreal.cpp  DazToUnrealCommands.cpp  DazToUnrealMaterials.cpp
Unreal/UnrealPlugin/DazToUnreal/Source/DazToUnreal/Public/: DazToUnreal.h
profiles/: osx-default.profile
